wire up the information.json as a container of all data about the email

--- a/working/index.html
+++ b/working/index.html
@@ -13,6 +13,7 @@
           <td class="center" align="center" valign="top">
             <center>
             <!-- Email Content -->
+            <a href="#{links go here}"></a>
             </center>
           </td>
         </tr>
