--- a/working/index.html
+++ b/working/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="viewport" content="width=device-width"/>
-      <link rel="stylesheet" href="../css/styles.css">
+      <link rel="stylesheet" href="css/styles.css">
 
     </head>
     <body>
